# ducdrop

./: .gitignore  CNAME  README.md  index.html  landing.html  package.json  pnpm-lock.yaml  robots.txt  security-policy.txt  sitemap.xml
.github/workflows/: desktop-release.yml
.well-known/: security.txt
assets/brand/backup-logo-20260713-114500/: logo-snippets.json
docs/: CLEAN_ROOM_BOUNDARY.md  DUCDROP_UPGRADE_BRIEF.md  PRODUCT_DIRECTION_V1_2.md  soul.md
ducdrop/: index.html
pdf2docx/: index.html
request-tool/: index.html
scripts/: make_icons.py  prepare-sidecars.mjs  real-download-smoke.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/lib/: ducdrop-copy.ts  tauri.ts  types.ts
src/routes/: +page.svelte
tom-mcp-chatgpt/: index.html
tomscreenrecorder/: index.html
